test/org/midica/testfiles/failing/compact-unknown-pattern.midica
INCLUDE inc/instruments.midica

0: c c c/d/e:pat_none c c
